--- a/merchandise.html
+++ b/merchandise.html
@@ -261,7 +261,10 @@
 									aria-haspopup="true"
 									aria-expanded="false"
 								>
+								<span class="underlineTheme">
+
 									Merchandise
+								</span>
 								</a>
 							</li>
 							<li class="nav-item">
@@ -614,10 +617,13 @@
 		<!-- ===== BODY SECTION END ===== -->
 
 
-		   <!-- ===== FOOTER SECTION START ===== -->
-			<footer class="container-fluid mt-4" id="footer">
+    <!-- ===== FOOTER SECTION START ===== -->
+			<footer class="container-fluid" id="footer">
 				<div class="row text-center text-black footer-icons">
-					<div class="col">
+					<div class="col-12 mt-4">
+						<h3 class="font-weight-bold logo-font">LUKE DUFFY <span class="underlineTheme"> FITNESS</span></h3>
+					</div>
+					<div class="col mt-1">
 						<a
 							href="https://www.facebook.com/"
 							target="_blank"
@@ -638,16 +644,19 @@
 								aria-hidden="true"
 							></i>
 						</a>
+						<a href="https://twitter.com/" class="footer-icon">
+							<i class="fab fa-twitter social-icon" aria-hidden="true"></i>
+						</a>
 					</div>
 				</div>
-				<div class="row text-center text-black footer-links">
+				<div class="row text-center text-black footer-links mt-3">
 					<div class="col">
 						<a href="testimonials.html" class="text-uppercase font-weight-bold footer-links"
 							>View Testimonials</a
 						>
 					</div>
 				</div>
-				<div class="row text-center text-black footer-links">
+				<!-- <div class="row text-center text-black footer-links">
 					<div class="col">
 						<a
 							href="blog.html"
@@ -655,7 +664,7 @@
 							>View Blog</a
 						>
 					</div>
-				</div>
+				</div> -->
 				<div class="row mt-2 text-center text-black copyright-text">
 					<div class="col">
 						<p>© Fitness-Gym 2021 by Luke Duffy</p>
