--- a/testimonials.html
+++ b/testimonials.html
@@ -37,6 +37,15 @@
 			integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
 			crossorigin="anonymous"
 		></script>
+		<link
+			href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css"
+			rel="stylesheet"
+		/>
+		<link
+			href="assets/js/bootstrap-icons/bootstrap-icons.css"
+			rel="stylesheet"
+		/>
+		<link href="assets/js/swiper/swiper-bundle.min.css" rel="stylesheet" />
 		<!-- LINKS END -->
 		<title>Testimonials</title>
 	</head>
@@ -310,8 +319,144 @@
 			</div>
 		</div>
 
-		<div class="container testimonials-container">
-			<div class="row">
+		<!-- <div class="container testimonials-container"> -->
+			<!-- ***** Testimonials Start ***** -->
+		<section id="testimonials" class="testimonials">
+			<div class="container">
+				<div
+					class="testimonials-slider swiper-container"
+				>
+					<div class="swiper-wrapper">
+						<div class="swiper-slide">
+							<div class="testimonial-item">
+								<div class="stars">
+									<i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i
+									><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i
+									><i class="bi bi-star-fill"></i>
+								</div>
+								<p>
+									<i class="bx bxs-quote-alt-left quote-icon-left"></i>
+									I just wanna say thanks for everything man from start to finish you have really helped me get an understanding of how to cut properly. All my questions have been answered and I feel that I now can go on by myself and continue on in the cut for another for weeks.
+									<i class="bx bxs-quote-alt-right quote-icon-right"></i>
+								</p>
+								<div class="profile mt-auto">
+									<img
+										src="assets/testimonials/testimonials-1.jpg"
+										class="testimonial-img"
+										alt=""
+									/>
+									<h3>Saul Goodman</h3>
+								</div>
+							</div>
+						</div>
+						<!-- End testimonial item -->
+
+						<div class="swiper-slide">
+							<div class="testimonial-item">
+								<div class="stars">
+									<i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i
+									><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i
+									><i class="bi bi-star-fill"></i>
+								</div>
+								<p>
+									<i class="bx bxs-quote-alt-left quote-icon-left"></i>
+														Looking back on my first picture I sent to you makes me realise how far I've gotten in this cut.Starting at 87kg and now at around 75kg. I'm so happy with the results. Thanks for everything man and hopefully we can talk again someday
+
+									<i class="bx bxs-quote-alt-right quote-icon-right"></i>
+								</p>
+								<div class="profile mt-auto">
+									<img
+										src="assets/testimonials/testimonials-2.jpg"
+										class="testimonial-img"
+										alt=""
+									/>
+									<h3>Sara Wilsson</h3>
+								</div>
+							</div>
+						</div>
+						<!-- End testimonial item -->
+
+						<div class="swiper-slide">
+							<div class="testimonial-item">
+								<div class="stars">
+									<i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i
+									><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i
+									><i class="bi bi-star-fill"></i>
+								</div>
+								<p>
+									<i class="bx bxs-quote-alt-left quote-icon-left"></i>
+												Looking back on my first picture I sent to you makes me realise how far I've gotten in this cut.Starting at 87kg and now at around 75kg. I'm so happy with the results. Thanks for everything man and hopefully we can talk again someday
+									<i class="bx bxs-quote-alt-right quote-icon-right"></i>
+								</p>
+								<div class="profile mt-auto">
+									<img
+										src="assets/testimonials/testimonials-3.jpg"
+										class="testimonial-img"
+										alt=""
+									/>
+									<h3>Jena Karlis</h3>
+								</div>
+							</div>
+						</div>
+						<!-- End testimonial item -->
+
+						<div class="swiper-slide">
+							<div class="testimonial-item">
+								<div class="stars">
+									<i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i
+									><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i
+									><i class="bi bi-star-fill"></i>
+								</div>
+								<p>
+									<i class="bx bxs-quote-alt-left quote-icon-left"></i>
+										It's the end of my 6 weeks and I have just stood on the scales and have dropped to 11st 10.5lbs. I have really enjoyed the training and being able to track and eat what foods I want so I'm not craving and then end up having a big binge
+									<i class="bx bxs-quote-alt-right quote-icon-right"></i>
+								</p>
+								<div class="profile mt-auto">
+									<img
+										src="assets/testimonials/testimonials-4.jpg"
+										class="testimonial-img"
+										alt=""
+									/>
+									<h3>Matt Brandon</h3>
+								</div>
+							</div>
+						</div>
+						<!-- End testimonial item -->
+
+						<div class="swiper-slide">
+							<div class="testimonial-item">
+								<div class="stars">
+									<i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i
+									><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i
+									><i class="bi bi-star-fill"></i>
+								</div>
+								<p>
+									<i class="bx bxs-quote-alt-left quote-icon-left"></i>
+													It's the end of my 6 weeks and I have just stood on the scales and have dropped to 11st 10.5lbs. I have really enjoyed the training and being able to track and eat what foods I want so I'm not craving and then end up having a big binge
+									<i class="bx bxs-quote-alt-right quote-icon-right"></i>
+								</p>
+								<div class="profile mt-auto">
+									<img
+										src="assets/testimonials/testimonials-5.jpg"
+										class="testimonial-img"
+										alt=""
+									/>
+									<h3>John Larson</h3>
+								</div>
+							</div>
+						</div>
+						<!-- End testimonial item -->
+					</div>
+					<div class="swiper-pagination"></div>
+				</div>
+			</div>
+		</section>
+		<!-- ***** Testimonials End ***** -->
+
+
+
+			<!-- <div class="row">
 				<div class="col-12">
 					<div class="card card-style-testimonial border-secondary mb-4">
 						<div class="card-body text-center">
@@ -371,7 +516,7 @@
 						</div>
 					</div>
 				</div>
-			</div>
+			</div> -->
 			<div class="row testimonial-page-btns">
 				<div class="col text-right">
 					<a href="/" class="btn btn-outline-black rounded-0 btn-sm">
@@ -390,14 +535,17 @@
 					</a>
 				</div>
 			</div>
-		</div>
+		<!-- </div> -->
 		<!-- ===== TESTIMONIALS SECTION END ===== -->
+<br />
 
-
-    			<!-- ===== FOOTER SECTION START ===== -->
-			<footer class="container-fluid mt-4" id="footer">
+    <!-- ===== FOOTER SECTION START ===== -->
+			<footer class="container-fluid" id="footer">
 				<div class="row text-center text-black footer-icons">
-					<div class="col">
+					<div class="col-12 mt-4">
+						<h3 class="font-weight-bold logo-font">LUKE DUFFY <span class="underlineTheme"> FITNESS</span></h3>
+					</div>
+					<div class="col mt-1">
 						<a
 							href="https://www.facebook.com/"
 							target="_blank"
@@ -418,18 +566,19 @@
 								aria-hidden="true"
 							></i>
 						</a>
+						<a href="https://twitter.com/" class="footer-icon">
+							<i class="fab fa-twitter social-icon" aria-hidden="true"></i>
+						</a>
 					</div>
 				</div>
-				<div class="row text-center text-black footer-links">
+				<div class="row text-center text-black footer-links mt-3">
 					<div class="col">
-						<a
-							href="testimonials.html"
-							class="text-uppercase font-weight-bold footer-links"
+						<a href="testimonials.html" class="text-uppercase font-weight-bold footer-links"
 							>View Testimonials</a
 						>
 					</div>
 				</div>
-				<div class="row text-center text-black footer-links">
+				<!-- <div class="row text-center text-black footer-links">
 					<div class="col">
 						<a
 							href="blog.html"
@@ -437,7 +586,7 @@
 							>View Blog</a
 						>
 					</div>
-				</div>
+				</div> -->
 				<div class="row mt-2 text-center text-black copyright-text">
 					<div class="col">
 						<p>© Fitness-Gym 2021 by Luke Duffy</p>
@@ -446,5 +595,21 @@
 			</footer>
 		</div>
 		<!-- ===== FOOTER SECTION END ===== -->
+
+		<!-- jQuery -->
+		<script src="assets/js/jquery-2.1.0.min.js"></script>
+
+		<!-- Bootstrap -->
+		<script src="assets/js/popper.js"></script>
+		<script src="assets/js/bootstrap.min.js"></script>
+
+		<!-- Plugins -->
+		<script src="assets/js/scrollreveal.min.js"></script>
+		<script src="assets/js/imgfix.min.js"></script>
+		<script src="assets/js/jquery.counterup.min.js"></script>
+		<script src="assets/js/swiper/swiper-bundle.min.js"></script>
+
+		<!-- Global Init -->
+		<script src="assets/js/custom.js"></script>
 	</body>
 </html>
