--- a/bag.html
+++ b/bag.html
@@ -320,11 +320,13 @@
 		
 
 		
-		<!-- ===== FOOTER SECTION START ===== -->
-		<div id="regFooter">
+    <!-- ===== FOOTER SECTION START ===== -->
 			<footer class="container-fluid" id="footer">
 				<div class="row text-center text-black footer-icons">
-					<div class="col">
+					<div class="col-12 mt-4">
+						<h3 class="font-weight-bold logo-font">LUKE DUFFY <span class="underlineTheme"> FITNESS</span></h3>
+					</div>
+					<div class="col mt-1">
 						<a
 							href="https://www.facebook.com/"
 							target="_blank"
@@ -345,18 +347,19 @@
 								aria-hidden="true"
 							></i>
 						</a>
+						<a href="https://twitter.com/" class="footer-icon">
+							<i class="fab fa-twitter social-icon" aria-hidden="true"></i>
+						</a>
 					</div>
 				</div>
-				<div class="row text-center text-black footer-links">
+				<div class="row text-center text-black footer-links mt-3">
 					<div class="col">
-						<a
-							href="testimonials.html"
-							class="text-uppercase font-weight-bold footer-links"
+						<a href="testimonials.html" class="text-uppercase font-weight-bold footer-links"
 							>View Testimonials</a
 						>
 					</div>
 				</div>
-				<div class="row text-center text-black footer-links">
+				<!-- <div class="row text-center text-black footer-links">
 					<div class="col">
 						<a
 							href="blog.html"
@@ -364,14 +367,13 @@
 							>View Blog</a
 						>
 					</div>
-				</div>
+				</div> -->
 				<div class="row mt-2 text-center text-black copyright-text">
 					<div class="col">
 						<p>© Fitness-Gym 2021 by Luke Duffy</p>
 					</div>
 				</div>
 			</footer>
-		</div>
 		</div>
 		<!-- ===== FOOTER SECTION END ===== -->
 	</body>
